--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -5,7 +5,7 @@
     align-items: center;
     height: 70px;
     background: transparent !important;
-    box-shadow: 0px 4px 25px 25px rgba(0, 0, 0, 0.1); /* Adjust values as needed */ /* Adjust values as needed */
+    box-shadow: 0px 4px 15px 5px rgba(0, 0, 0, 0.1); /* Adjust values as needed */ /* Adjust values as needed */
     
     /* Card-like bottom border */
     
@@ -144,7 +144,7 @@ display: none;
     z-index: 1010;
   }
 
-  .custom_header_1 {
+  /* .custom_header_1 {
     margin-left: 0 !important;
     background-color: #05021F;
     padding-right: 20px;
@@ -154,7 +154,7 @@ display: none;
     border-radius: 10px;
     color: #e0e0e0 !important;
     box-shadow: 0px 5px 4px 0px rgba(0, 0, 0, 0.25);
-}
+} */
 
 
 
@@ -267,28 +267,15 @@ width: 120px;
 
 }
 
-.custom_header_1 {
-  margin-left: 4%;
-  background-color: #05021F;
-  padding-right: 20px;
-  padding-left: 20px;
-  padding-top: 8px;
-  padding-bottom: 8px;
-  border-radius: 10px;
-  color: #e0e0e0 !important;
-
-  /* Box shadow for bottom and right */
-  box-shadow: 0px 5px 4px 0px rgba(0, 0, 0, 0.25); /* x, y, blur, spread, color */ /* Horizontal, Vertical, Blur, Color */
-}
 
 
-.custom_header_1 p strong {
+/* .custom_header_1 p strong {
 
   
   color: rgba(255, 255, 255, 1) !important;
   
   
-  }
+  } */
   
 
 .dropdown_header {
