--- a/src/styles/landing.css
+++ b/src/styles/landing.css
@@ -41,10 +41,10 @@ padding-left: 5%;
   }
   .landing-content1 h4 {
 
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 700;
     color: rgba(30, 30, 30, 1);
-    width: 80%;
+    width: 70%;
     
     }
 
@@ -68,7 +68,7 @@ box-shadow: none;
 
       .image-container {
         position: absolute;
-        right: 6%;
+        right: 4%;
         top: 50%;
         transform: translateY(-45%); /* Centers the image vertically */
          /* Adjust the width of the image */
@@ -263,7 +263,7 @@ width: 400px;
 
 
 
-  @media (min-width: 768px) and (max-width: 1050px) {
+  @media (min-width: 768px) and (max-width: 1020px) {
     .landing-content1 h4 {
         display: none !important;
     }
@@ -276,7 +276,7 @@ width: 510px;
 
 .svg_clippath {
 
-height: 60vh;
+height: 550px !important;
 
 }
 
@@ -286,20 +286,30 @@ height: 60vh;
 
 .landing-content1 {
 
-width: 400px;
+width: 450px !important;
 
 
 }
 .landing-content {
 
 
-top: 30% !important;
+top: 22% !important;
 
 }
 
+.landing-content1 h2 {
+
+font-size: 35px !important;
+
+
+}
+
+
+
 .image-container {
 
-top: 40%;
+top: 30% !important;
+width: 450px !important;
 
 }
 
@@ -309,7 +319,7 @@ top: 40%;
   }
 
 
-  @media (min-width: 1000px) and (max-width: 1300px) {
+  @media (min-width: 1020px) and (max-width: 1300px) {
     .landing-content1 h2 {
       font-size: 42px;
       font-weight: 700;
@@ -370,7 +380,7 @@ height: 65vh;
 
 .landing-content1 {
 
-width: 300px;
+width: 455px;
 
 
 }
