--- a/src/styles/transferservice/transfercards.css
+++ b/src/styles/transferservice/transfercards.css
@@ -56,6 +56,7 @@ max-width: 420px;
 border-radius: 10px;
 padding-top: 30px;
 box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.4);
+position: relative;
 
 }
 .card_transfer1_img1 {
