--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -141,7 +141,7 @@ display: none;
     display: flex;
     justify-content: flex-end;
     margin-right: 5%;
-    z-index: 1010;
+    z-index: 999999999999999999;
   }
 
   /* .custom_header_1 {
