--- a/src/styles/luggage1.css
+++ b/src/styles/luggage1.css
@@ -1,6 +1,6 @@
 .luggage-section {
     background-color: #05021F;
-    padding-top: 5%;
+    padding-top: 2%;
     padding-bottom: 3%;
 
     text-align: center;
@@ -46,7 +46,7 @@
 }
 
 .luggage-section input, .luggage-section select {
-    cursor:pointer;
+    
     border:none;
     border-radius: 2px;
     padding:16px;
@@ -92,6 +92,7 @@
         
          padding: 10px !important;
          width: 100% !important;
+         height: 50px;
         
     }
 
