--- a/src/styles/tailor2.css
+++ b/src/styles/tailor2.css
@@ -11,7 +11,7 @@
 .second_row1 {
 
 display: grid;
-grid-template-columns: 1fr 1fr 1fr;
+grid-template-columns: 1fr 1fr;
 gap: 20px;
 
 
@@ -21,7 +21,7 @@ gap: 20px;
 .first_row1 {
 
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     gap: 20px;
     
     
