--- a/src/styles/transferservice/transfercards.css
+++ b/src/styles/transferservice/transfercards.css
@@ -1,124 +1,124 @@
 .transfer_service_heading1 {
 
-text-align: center;
-padding-top: 60px;
-padding-bottom: 10px;
-font-size: 52px;
-font-weight: 700;
-color: rgba(0, 11, 29, 1);
-display: none;
+  text-align: center;
+  padding-top: 60px;
+  padding-bottom: 10px;
+  font-size: 52px;
+  font-weight: 700;
+  color: rgba(0, 11, 29, 1);
+  display: none;
 
 }
+
 .transfer_service_heading2 {
 
-  
-  font-size:32px;
+
+  font-size: 32px;
   text-align: center;
   font-weight: 700;
   color: rgba(0, 11, 29, 1);
   padding-right: 10px;
   padding-left: 10px;
   padding-top: 30px;
-  
-  }
-  
+
+}
 
 
 
 
 
-.cards_div_transfer{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, auto);
-    gap: 30px;
-    padding: 20px;
-    margin: 0 auto;
-    height: auto;
-    
-    padding-bottom: 40PX;
-    max-width: 1250px;
-    justify-items: center !important;
-        align-items: center !important;
-        justify-content: center !important;
-        padding-top: 30px;
+
+.cards_div_transfer {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, auto);
+  gap: 30px;
+  padding: 20px;
+  margin: 0 auto;
+  height: auto;
+
+  padding-bottom: 40PX;
+  max-width: 1250px;
+  justify-items: center !important;
+  align-items: center !important;
+  justify-content: center !important;
+  padding-top: 30px;
 }
 
 .card_transfer12 {
 
-display: flex;
-flex-direction: column;
-justify-content: space-between;
-align-items: center;
-height: 690px;
-min-width: 350px;
-max-width: 420px;
-border-radius: 10px;
-padding-top: 30px;
-box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.4);
-position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  height: 580px;
+  min-width: 350px;
+  max-width: 420px;
+  border-radius: 10px;
+  padding-top: 30px;
+  box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.4);
+  position: relative;
 
 }
+
 .card_transfer1_img1 {
 
-width: 300px;
-height: 200px;
-padding-right: 10px;
-padding-left: 10px;
+  width: 300px;
+  height: 200px;
+  padding-right: 10px;
+  padding-left: 10px;
 
 }
 
 .cards_grey_buttons {
-    display: flex
-;
-    flex-direction: rows;
-    justify-content: space-between;
-    align-items: center;
-    gap: 12%;
-    padding-right: 10%;
-    padding-left: 10%;
-    width: 100%;
+  display: flex;
+  flex-direction: rows;
+  justify-content: space-between;
+  align-items: center;
+  gap: 12%;
+  padding-right: 10%;
+  padding-left: 10%;
+  width: 100%;
 }
 
 .grey_button_1_d {
 
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-gap: 10px;
-text-align: center;
-background-color: #f6f6f6;
-width: 80%;
-border-radius: 10px;
-height: 80px;
-vertical-align: middle;
-color: #555555;
-font-weight: 300;
-height: 75px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  text-align: center;
+  background-color: #f6f6f6;
+  width: 80%;
+  border-radius: 10px;
+  height: 80px;
+  vertical-align: middle;
+  color: #555555;
+  font-weight: 300;
+  height: 75px;
 
 
 }
+
 .grey_button_1_d p {
 
-   margin: 0; 
-   color: Hourly Rate;
-   font-weight: 400;
-   font-size: 14px;
-   
-
-    }
-
- .first_text1 {
-
-    font-weight: 500 !important;
-    font-size: 16px !important;
-    color: rgba(85, 85, 85, 1)!important;
+  margin: 0;
+  color: Hourly Rate;
+  font-weight: 400;
+  font-size: 14px;
 
 
- }   
+}
 
-    
+.first_text1 {
+
+  font-weight: 500 !important;
+  font-size: 16px !important;
+  color: rgba(85, 85, 85, 1) !important;
+
+
+}
 
 
 
@@ -130,73 +130,84 @@ height: 75px;
 
 
 
- .card_specs_div {
-    display: flex;
-    flex-direction: row; /* Corrected from 'rows' */
-    justify-content: space-between;
-    align-items: center;
-    gap: 15%;
-    width: 100%;
-    position: relative;
-    padding-top: 15px;
-    margin-bottom: -1.5rem;
-    /* Needed for the pseudo-element to position correctly */
+
+
+.card_specs_div {
+  display: flex;
+  flex-direction: row;
+  /* Corrected from 'rows' */
+  justify-content: space-between;
+  align-items: center;
+  gap: 15%;
+  width: 100%;
+  position: relative;
+  padding-top: 15px;
+  margin-bottom: -1.5rem;
+  /* Needed for the pseudo-element to position correctly */
 }
 
 .card_specs_div::before {
-    content: '';
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    top: 0; /* Position at the top of the div */
-    left: 50%; /* Center horizontally */
-    transform: translateX(-50%); /* Adjust for centering */
-    width: 80%; /* Line width relative to the div */
-    height: 1px; /* Line thickness */
-    background-color: rgba(237, 237, 237, 1); /* Line color */
+  content: '';
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  /* Position at the top of the div */
+  left: 50%;
+  /* Center horizontally */
+  transform: translateX(-50%);
+  /* Adjust for centering */
+  width: 80%;
+  /* Line width relative to the div */
+  height: 1px;
+  /* Line thickness */
+  background-color: rgba(237, 237, 237, 1);
+  /* Line color */
 }
 
 .icon_specs_div {
 
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
 }
 
 
 .last_rent_now_div {
-    width: 100%;
-    height: 115px;
-    background-color: #05021f;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0px -4px 8px rgba(0, 0, 0, 0.4);
-    clip-path: ellipse(58% 66% at 50% 91%);
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+  width: 100%;
+  height: 115px;
+  background-color: #05021f;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0px -4px 8px rgba(0, 0, 0, 0.4);
+  clip-path: ellipse(58% 66% at 50% 91%);
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
-  .last_rent_now_div h4 {
-    font-size: 20px;
-    font-weight: 600;
-    color: #FFFFFF;
-    padding-top: 35px;
-    text-align: center;
-  }
-  
-  .last_rent_now_div h5 {
-    font-size: 12px;
-    font-weight: 350;
-    color: #FFFFFF;
-    text-align: center;
-    padding: 0;
-    margin: 0;
-    
-  }
-  
+
+.last_rent_now_div h4 {
+  font-size: 20px;
+  font-weight: 600;
+  color: #FFFFFF;
+  padding-top: 35px;
+  text-align: center;
+  margin-top: -20px;
+}
+
+.last_rent_now_div h5 {
+  font-size: 12px;
+  font-weight: 350;
+  color: #FFFFFF;
+  text-align: center;
+  padding: 0;
+  margin: 0;
+
+}
+
 
 
 
@@ -206,61 +217,63 @@ width: 80%;
 .card_specs_p1 {
 
 
-margin:0;
-text-align: left !important;
+  margin: 0;
+  text-align: left !important;
 
 
 }
 
 .testing_123 {
 
-display: flex !important;
-justify-content: left !important;
-align-items: center !important;
-padding-left: 40px;
+  display: flex !important;
+  justify-content: left !important;
+  align-items: center !important;
+  padding-left: 40px;
 
 
 
 }
+
 .last_rent_now_div:hover h4 {
-    
-    color: #e9bd49;
+
+  color: #e9bd49;
 
 }
 
 .last_rent_now_div:hover h5 {
-    
-    color: #e9bd49;
+
+  color: #e9bd49;
 
 }
 
 
 
 .last_rent_now_div:hover {
-    
-    color: #e9bd49;
-    cursor: pointer;
+
+  color: #e9bd49;
+  cursor: pointer;
 
 }
+
 .eclipse_div {
 
 
-width: 100%;
-height: 50%;
-background-color: #05021f;
+  width: 100%;
+  height: 50%;
+  background-color: #05021f;
 
 
 }
 
 .location_cards_selectable {
 
-display: flex;
-flex-direction: row;
-justify-content: center;
-gap: 10px;
-align-items: center;
-text-align: center;
-width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 10px;
+  align-items: center;
+  text-align: center;
+  width: 100%;
 
 }
 
@@ -269,115 +282,216 @@ width: 100%;
 .small_cards_1 {
   text-align: center;
   white-space: pre-line;
-  height: 35px;
-  display: flex
-;
-  flex-direction: column;
-  justify-content: center;
+  height: 40px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   align-items: center;
-  font-size: 11px;
+  font-size: 14px;
   width: 90px;
   border: none;
-  border-radius: 10px;
-  background-color: #05021f;
-  color: white;
-  padding-left: 3px !important;
+  border-radius: 3px;
+  background-color: #f6f6f6;
+  color: #555;
+  width: 80%;
+  padding-right: 15px !important;
+  padding-left: 15px !important;
+  animation: pulse 1.5s infinite;
+}
+@keyframes pulse {
+  0% {
+    transform: scale(1); /* Initial size */
+  }
+  50% {
+    transform: scale(1.1); /* Slightly grow the button */
+  }
+  100% {
+    transform: scale(1); /* Return to original size */
+  }
+}
+
+
+.small_cards_1 {
+
+  font-weight: 400;
+  padding: 0;
+  margin: 0%;
+  line-height: 14px;
+
+
+}
+
+.small_cards_2 {
+  text-align: center;
+  white-space: pre-line;
+  height: 40px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 14px;
+  width: 90px;
+  border: none;
+  border-radius: 3px;
+  background-color: #f6f6f6;
+  color: #555;
+  width: 80%;
+  font-weight: 400;
+  padding: 0;
+  margin: 0%;
+  line-height: 14px;
+  padding-right: 15px !important;
+  padding-left: 15px !important;
+  padding-right: 15px !important;
+  padding-left: 15px !important;
+  animation: pulse 1.5s infinite;
+}
+@keyframes pulse {
+  0% {
+    transform: scale(1); /* Initial size */
+  }
+  50% {
+    transform: scale(1.1); /* Slightly grow the button */
+  }
+  100% {
+    transform: scale(1); /* Return to original size */
+  }
+}
+
+.small_cards_3 {
+  text-align: center;
+  white-space: pre-line;
+  height: 40px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 14px;
+  width: 90px;
+  border: none;
+  width: 80%;
+  border-radius: 3px;
+  background-color: #f6f6f6;
+  color: #555;
+
+  font-weight: 400;
+  padding: 0;
+  margin: 0%;
+  line-height: 14px;
+  padding-right: 15px !important;
+  padding-left: 15px !important;
+  padding-right: 15px !important;
+  padding-left: 15px !important;
+  animation: pulse 1.5s infinite;
+}
+@keyframes pulse {
+  0% {
+    transform: scale(1); /* Initial size */
+  }
+  50% {
+    transform: scale(1.1); /* Slightly grow the button */
+  }
+  100% {
+    transform: scale(1); /* Return to original size */
+  }
+}
+
+.small_cards_3 span {
+
+font-weight: 900;
+font-size: 16px;
+
+}
+.small_cards_2 span {
+
+  font-weight: 900;
+  font-size: 16px;
+  
+  }
+
+  .small_cards_1 span {
+
+    font-weight: 900;
+    font-size: 16px;
+    
+    }
+    
+.small_cards_4 {
+
+
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+background-color: #fbfbfb;
+color:#555555;
+width: 120px;
+height: 80px;
+border: none;
+border-radius: 10px;
+font-weight: 500;
+cursor: default !important;
+
+
+}
+.small_cards_4 span {
+
+
+  
+  color:#555555;
+  
+  
+  
+  font-weight: 500;
+  
+  
+  }
+  
+
+
+
+
+
+
+
+.small_cards_2:hover {
+  transform: scale(1.05);
+  /* Enlarges the button by 10% */
+  transition: transform 0.5s ease, color 0.5s ease;
+  /* Smooth transition for scale and color */
+}
+
+.small_cards_2:hover {
+  border: 2px solid #d9a35b;
+  transition: transform 0.5s ease, color 0.5s ease;  /* Change text color on hover */
+}
+
+.small_cards_3:hover {
+  transform: scale(1.05);
+  /* Enlarges the button by 10% */
+  transition: transform 0.5s ease, color 0.5s ease;
+  /* Smooth transition for scale and color */
+}
+
+.small_cards_3:hover {
+  border: 2px solid #d9a35b;
+  transition: transform 0.5s ease, color 0.5s ease;  /* Change text color on hover */
+}
+
+.small_cards_1:hover {
+  transform: scale(1.05);
+  /* Enlarges the button by 10% */
+  transition: transform 0.5s ease, color 0.5s ease;
+  /* Smooth transition for scale and color */
+}
+
+.small_cards_1:hover {
+  border: 2px solid #d9a35b;
+  transition: transform 0.5s ease, color 0.5s ease;  /* Change text color on hover */
 }
 
 
 
-  .small_cards_1 {
-
-font-weight: 400;
-padding: 0;
-margin: 0%;
-line-height: 14px;
-
-
-  }
-
-  .small_cards_2 {
-    text-align: center;
-    white-space: pre-line;
-    height: 35px;
-    display: flex
-  ;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-size: 11px;
-    width: 90px;
-    border: none;
-    border-radius: 10px;
-    background-color: #05021f;
-    color: white;
-    
-font-weight: 400;
-padding: 0;
-margin: 0%;
-line-height: 14px;
-
-
-  }
-  .small_cards_3 {
-    text-align: center;
-    white-space: pre-line;
-    height: 35px;
-    display: flex
-  ;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-size: 11px;
-    width: 90px;
-    border: none;
-    border-radius: 10px;
-    background-color: #05021f;
-    color: white;
-    
-font-weight: 400;
-padding: 0;
-margin: 0%;
-line-height: 14px;
-padding-right: 3px !important;
-
-
-  }
-  
-
-
-
-
-
-
-
-  .small_cards_1:hover {
-    transform: scale(1.1); /* Enlarges the button by 10% */
-    transition: transform 0.5s ease, color 0.5s ease; /* Smooth transition for scale and color */
-  }
-  
-  .small_cards_1:hover {
-    color: #e8bb47; /* Change text color on hover */
-  }
-  
-  .small_cards_2:hover {
-    transform: scale(1.1); /* Enlarges the button by 10% */
-    transition: transform 0.5s ease, color 0.5s ease; /* Smooth transition for scale and color */
-  }
-  
-  .small_cards_2:hover {
-    color: #e8bb47; /* Change text color on hover */
-  }
-
-
-  .small_cards_3:hover {
-    transform: scale(1.1); /* Enlarges the button by 10% */
-    transition: transform 0.5s ease, color 0.5s ease; /* Smooth transition for scale and color */
-  }
-  
-  .small_cards_3:hover {
-    color: #e8bb47; /* Change text color on hover */
-  }
 
 
 
@@ -387,13 +501,25 @@ padding-right: 3px !important;
 
 
 
-    
-  .small_cards_1 span {
-    display: block; /* Each word or element inside span will appear on a new line */
-  }
-  .small_cards_1.selected {
-    background-color: #66afe9; /* Change background color when selected */
-    color: white; /* Change text color */
-    border: 2px solid #3c8dbc; /* Light blue border */
-    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.2); /* Darker shadow when selected */
-  }
+.small_cards_1 span {
+  display: block;
+  /* Each word or element inside span will appear on a new line */
+}
+
+
+
+
+.line-container {
+  position: relative;
+  width: 90%;
+}
+
+.line-container::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background-color: #ebebeb; /* Change the color as needed */
+}
